--- a/project.ipynb
+++ b/project.ipynb
@@ -443,12 +443,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "developing-optimum",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The house with adress 12, Calle Independencia, Urbanización Parque Real, El Escorial, Comunidad de Madrid, 28280, España is the most expensive and its price is 8500000\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "import pandas as pd\n",
+    "ds = pd.read_csv('assets/real_estate.csv', sep=';', decimal=\",\")\n",
+    "data = ds.price.max()\n",
+    "dataf = ds.loc[ds['price'] == data]\n",
+    "address = dataf[['latitude','longitude']]\n",
+    "lati = address.iloc[0][\"latitude\"]\n",
+    "longi = address.iloc[0]['longitude']\n",
+    "\n",
+    "from geopy.geocoders import Nominatim\n",
+    "\n",
+    "geolocator = Nominatim(user_agent=\"direccion\")\n",
+    "location = geolocator.reverse(\"{}, {}\".format(address.iloc[0][\"latitude\"], address.iloc[0]['longitude']))\n",
+    "\n",
+    "\n",
+    "print(\"The house with adress\", location  ,\"is the most expensive and its price is\", data)"
    ]
   },
   {
@@ -466,12 +489,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "lovely-oasis",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "The house with adress Calle Carlota Bustelo, El Prado, Parla, Comunidad de Madrid, 28980, España is the most expensive and its price is 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "import pandas as pd\n",
+    "ds = pd.read_csv('assets/real_estate.csv', sep=';', decimal=\",\")\n",
+    "data = ds.price.min()\n",
+    "dataf = ds.loc[ds['price'] == data]\n",
+    "address = dataf[['latitude','longitude']]\n",
+    "lati = address.iloc[0][\"latitude\"]\n",
+    "longi = address.iloc[0]['longitude']\n",
+    "print(data)\n",
+    "from geopy.geocoders import Nominatim\n",
+    "\n",
+    "geolocator = Nominatim(user_agent=\"direccion\")\n",
+    "location = geolocator.reverse(\"{}, {}\".format(address.iloc[0][\"latitude\"], address.iloc[0]['longitude']))\n",
+    "\n",
+    "\n",
+    "print(\"The house with adress\", location  ,\"is the most expensive and its price is\", data)"
    ]
   },
   {
@@ -491,12 +538,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "every-tiffany",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "he bigger house is located on Calle Juan carlos I, Las Brisas, Los Manantiales, Sevilla la Nueva, Comunidad de Madrid, 28609, España and its surface is 249000.0 meters\n",
+      "he bigger house is located on Pum Pum Café, 6, Calle de Tribulete, Lavapiés, Embajadores, Centro, Madrid, Comunidad de Madrid, 28012, España and its surface is 15.0 meters\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "import pandas as pd\n",
+    "ds = pd.read_csv('assets/real_estate.csv', sep=';', decimal=\",\")\n",
+    "data = ds.surface.max()\n",
+    "dataf = ds.loc[ds['surface'] == data]\n",
+    "address = dataf[['latitude','longitude']]\n",
+    "\n",
+    "\n",
+    "from geopy.geocoders import Nominatim\n",
+    "\n",
+    "geolocator = Nominatim(user_agent=\"direccion\")\n",
+    "location = geolocator.reverse(\"{}, {}\".format(address.iloc[0][\"latitude\"], address.iloc[0]['longitude']))\n",
+    "\n",
+    "data2 = ds.surface.min()\n",
+    "dataf2 = ds.loc[ds['surface'] == data2]\n",
+    "address2 = dataf2[['latitude','longitude']]\n",
+    "\n",
+    "\n",
+    "from geopy.geocoders import Nominatim\n",
+    "\n",
+    "geolocator = Nominatim(user_agent=\"direccion\")\n",
+    "location2 = geolocator.reverse(\"{}, {}\".format(address2.iloc[0][\"latitude\"], address2.iloc[0]['longitude']))\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"he bigger house is located on\", location  ,\"and its surface is\", data, 'meters')\n",
+    "print(\"he smaller house is located on\", location2  ,\"and its surface is\", data2, 'meters')\n"
    ]
   },
   {
@@ -516,12 +598,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "exciting-accreditation",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unnamed: 0                                                          1\n",
+      "id_realEstates                                              153771986\n",
+      "isNew                                                           False\n",
+      "realEstate_name                               ferrari 57 inmobiliaria\n",
+      "phone_realEstate                                          912177526.0\n",
+      "url_inmueble        https://www.fotocasa.es/es/comprar/vivienda/ma...\n",
+      "rooms                                                             3.0\n",
+      "bathrooms                                                         2.0\n",
+      "surface                                                         103.0\n",
+      "price                                                          195000\n",
+      "date                                     2019-12-28T18:27:15.9975027Z\n",
+      "description         Ponemos a la venta piso de 3 dormitorios con t...\n",
+      "address             Calle Presidente Felipe Gonzalez, Arganda del Rey\n",
+      "country                                                        España\n",
+      "level1                                                         Madrid\n",
+      "level2                                                         Madrid\n",
+      "level3                                 Madrid Sureste - Cuenca Tajuña\n",
+      "level4                                       Arganda del Rey, Zona de\n",
+      "level5                                                Arganda del Rey\n",
+      "level6                                                            NaN\n",
+      "level7                                                        Perlita\n",
+      "level8                                                            NaN\n",
+      "upperLevel                                                    Perlita\n",
+      "countryId                                                           0\n",
+      "level1Id                                                            0\n",
+      "level2Id                                                            0\n",
+      "level3Id                                                            0\n",
+      "level4Id                                                            0\n",
+      "level5Id                                                            0\n",
+      "level6Id                                                            0\n",
+      "level7Id                                                            0\n",
+      "level8Id                                                            0\n",
+      "accuracy                                                            0\n",
+      "latitude                                                    40.294828\n",
+      "longitude                                                   -3.444024\n",
+      "zipCode                                                           NaN\n",
+      "customZone                                                        NaN\n",
+      "Name: 0, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "data = ds.iloc[0]\n",
+    "print(data)"
    ]
   },
   {
